--- a/src/components/filters/DateFilter/DateFilterButton/DateFilterButton.scss
+++ b/src/components/filters/DateFilter/DateFilterButton/DateFilterButton.scss
@@ -7,7 +7,7 @@ $transition-length: 0.2s;
 $separator-icon: "data:image/svg+xml,%3Csvg width='7' height='26' viewBox='0 0 7 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 4h2v2H0V4zm0-4h2v2H0V0zm5 4h2v2H5V4zm0-4h2v2H5V0zm0 8h2v2H5V8zM0 8h2v2H0V8zm0 4h2v2H0v-2zm5 4h2v2H5v-2zm-5 0h2v2H0v-2zm5 4h2v2H5v-2zm-5 0h2v2H0v-2zm5 4h2v2H5v-2zm-5 0h2v2H0v-2zm5-12h2v2H5v-2z' fill='%23B0BECA' fill-rule='evenodd'/%3E%3C/svg%3E%0A";
 
 .gd-date-filter-button {
-    @extend %gd-font-base;
+    @include gd-font-base;
     font-size: nth(map-get($gd-typo, font-sizes), 5);
     line-height: nth(map-get($gd-typo, line-heights), 1);
     max-width: none !important;
