--- a/src/components/visualizations/styles/headline.scss
+++ b/src/components/visualizations/styles/headline.scss
@@ -5,13 +5,13 @@
     text-align: center;
 
     .headline-primary-item {
+        @include gd-heading-1;
+
         overflow: hidden;
         height: 60px;
         line-height: 60px;
         font-size: 50px;
         white-space: nowrap;
-
-        @extend %gd-heading-1;
 
         .headline-value-wrapper {
             display: inline-block;
@@ -98,7 +98,7 @@
         margin-bottom: 15px;
         color: $gd-color-state-blank;
 
-        @extend %gd-font-base;
+        @include gd-font-base;
     }
 
     .headline-compare-section-item {
